[BlackBerry] More null checks for m_mainFrame https://bugs.webkit.org/show_bug.cgi?id=114172

Patch by Jakob Petsovits <jpetsovits@blackberry.com> on 2013-04-08
Reviewed by Rob Buis.

After r147744, some unit tests were crashing on WebPage
shutdown, because BackingStorePrivate::repaint() now uses
pixelContentsRect() (accessing m_webPage->contentsRect())
instead of BackingStoreClient::contentsRect(). In m_webPage,
m_mainFrame had already been set to 0.

Make us more robust against these errors by checking
the existence of m_mainFrame more diligently.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::shouldZoomAboutPoint):
(BlackBerry::WebKit::WebPagePrivate::shouldSendResizeEvent):
(BlackBerry::WebKit::WebPagePrivate::contentsSize):
(BlackBerry::WebKit::WebPagePrivate::absoluteVisibleOverflowSize):
(BlackBerry::WebKit::WebPagePrivate::setViewMode):

Canonical link: https://commits.webkit.org/132570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147945 268f45cc-cd09-0410-ab3c-d52691b4dbfc